# AETHER

./: README.md  aether.json  agent.py  browser_tool.py  config_loader.py  io_tool.py  main.py  parser.py
AETHER/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
AETHER/configs/: aether.yaml
AETHER/docs/: adding_tools.md  architecture.md  guardrails.md
AETHER/evals/datasets/: smoke.jsonl
AETHER/examples/: run_once.py
AETHER/src/aether/: __init__.py  agent.py  cli.py  guardrails.py  llm.py  tool_registry.py  tracing.py  types.py
AETHER/src/aether/evals/: harness.py
AETHER/src/aether/tools/: __init__.py  base.py  builtin.py  registry.py
AETHER/tests/: test_agent_smoke.py
