[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-agent"
version = "0.1.0"
description = "AETHER: a reference repo for tool-using AI agents with guardrails and evals"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Ethan", email="noreply@example.com"}]
dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[project.scripts]
aether = "aether.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
